--- a/src/components/SiteHeader.astro
+++ b/src/components/SiteHeader.astro
@@ -8,15 +8,11 @@
             />
         </div>
         <p class="text-center text-3xl mt-6 mb-3 font-extrabold font-mono">
-            Tiny Rocket
+            Ratio
         </p>
     </a>
     <nav class="flex justify-center mt-6 mb-12">
         <a class="mx-1 underline underline-offset-2" href="/"> Home</a>
-        <a class="mx-1 underline underline-offset-2" href="/map"> Map</a>
-        <a class="mx-1 underline underline-offset-2" href="/blog"> Blog</a>
-        <a class="mx-1 underline underline-offset-2" href="/doc"> Doc</a>
         <a class="mx-1 underline underline-offset-2" href="/rss.xml"> RSS</a>
-        <a class="mx-1 underline underline-offset-2" href="/search"> Search</a>
     </nav>
 </header>
