--- a/src/components/BlogHeader.astro
+++ b/src/components/BlogHeader.astro
@@ -6,8 +6,8 @@ export interface Props {
 const { title } = Astro.props;
 ---
 
-<header class="text-zinc-700 text-lg">
-    <a href="/blog">
+<header class="text-white text-lg">
+    <a href="/">
         <div class="flex justify-center my-10">
             <img
                 class="h-28 rounded-md shadow-md shadow-zinc-500"
@@ -19,9 +19,4 @@ const { title } = Astro.props;
             {title}
         </p>
     </a>
-    <nav class="flex justify-center mt-6 mb-12">
-        <a class="mx-2 underline underline-offset-2" href="/"> Home</a>
-        <a class="mx-2 underline underline-offset-2" href="/doc"> Doc</a>
-        <a class="mx-2 underline underline-offset-2" href="/search"> Search</a>
-    </nav>
 </header>
