--- a/src/components/BlogPostPreview.astro
+++ b/src/components/BlogPostPreview.astro
@@ -6,18 +6,15 @@ export interface Props {
 const { post } = Astro.props;
 ---
 
-<div class="my-8 flex justify-between">
+<div class="my-4 mx-2 w">
     <div>
         <a class="underline underline-offset-2" href={post.url}>
             <h1 class="font-semibold">{post.frontmatter.title}</h1>
         </a>
-        <h2 class="font-light">{post.frontmatter.description}</h2>
-        <a
-            class="italic font-semibold text-sm text-zinc-600 underline underline-offset-2"
-            href={post.url}>Read more</a
-        >
+        <h2 class="font-light w-52">{post.frontmatter.description}</h2>
+        
     </div>
-    <div class="font-extralight">
-        {post.frontmatter.pubDate}
-    </div>
+
+    <style>
+    </style>
 </div>
